Initial commit for branch with 4.0.7-M4 code base plus Oracle/MariaDB/PostgreSQL from 4.0.9